--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,3 +6,11 @@
     text-wrap: balance;
   }
 }
+.hide-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
